fix(services): replace margin-bottom with padding-bottom for spacing

--- a/dev/sass/services.scss
+++ b/dev/sass/services.scss
@@ -2,7 +2,7 @@
 
 .services {
     padding-top: 120px;
-    margin-bottom: 100px;
+    padding-bottom: 100px;
 
     .top-title {
         margin-bottom: 10px;
